Width for dates was too short. Fixed

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body{
   }
   
 .countdown-date{
-    width: 150px;
+    width: 170px;
     display: inline-block;
     text-align: left;
   }
